# hellowhaaa-Trident_Tech_Interview

./: .gitignore  Dockerfile  README.md  choose_class.yaml  openapi.yaml  pyproject.toml  test_python_dictionary.py
src/: app.py  router.py
src/controller/: courses.py  home.py  teachers.py
src/schemas/: courses.py  teachers.py
tests/: test_teachers.py
