[tool.poetry]
name = "Trident_Tech_LilyChou"
version = "0.1.0"
description = "test of junior interviewer"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.115.11"
pytest = "^8.3.5"
uvicorn = "^0.34.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
httpx = "^0.28.1"
